--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </main>
   <hr />
   <footer class="container-fluid">
-    &copy; 2019
+    &copy; 2019 Anusha Kalyankar
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
