--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <title>Anusha Kalyankar</title>
 
 </head> 
-<body class="bgimg" style="background-image: url(fall.jpg)"></body>
+<body class="bgimg" style="background-image: url(fall.jpg)">
+	</body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
