--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <title>Anusha Kalyankar</title>
 
 </head> 
-<body class="bgimg" style="background-image: url(fall.jpg)">
-	</body>
+<body class="bgimg" style="background-image: url(fall.jpg)"></body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
@@ -34,8 +33,12 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="convertions.html">conversions</a>
+          <a class="nav-link" href="conversions.html">conversions</a>
         </li>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="qunit test.html">qunit test</a>
+      </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -110,8 +113,8 @@
         </div>
       </article>
 
-      <aside class="col-sm-4">
-<img src="anusha.jpg" class="img-circle" alt="Cinque Terre" width="200" Height="200">
+      <aside class="col-sm-"7>
+         <img src="anusha.JPG" class="rounded-circle img-fluid" alt="Cinque Terre" id="pic">
         <h2>Aside</h2>
 
        <p class="para"> I enjoy travelling with family.My other hobbies are listening Music and watching cricket matches.</p>
@@ -139,7 +142,7 @@
   </main>
   <hr />
   <footer class="container-fluid">
-    &copy; 2019 Anusha Kalyankar
+    &copy; 2019
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
